# bits-playground

./: CMakeLists.txt  README.md  main.cpp
bits-lib/: CMakeLists.txt
bits-lib/src/sw/bits/: uint.h
bits-test/: CMakeLists.txt  uint.cpp
